# colab-ingest

./: $null  .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
colab_ingest/: __init__.py  cli.py
colab_ingest/core/: __init__.py  pipeline.py  state.py
colab_ingest/downloaders/: __init__.py  bunkr_adapter.py  buzzheavier_adapter.py  pixeldrain.py
colab_ingest/downloaders/bunkr/src/: config.py
colab_ingest/utils/: __init__.py  extract.py  logging.py  paths.py  upload.py  url_detect.py
docs/: COLAB.md
examples/: links.example.txt  sample_workflow.py
notebooks/: colab_ingest.ipynb
scripts/: colab_one_command.sh  mount_drive.py  setup_submodules.sh
tests/: __init__.py  conftest.py  test_extract.py  test_paths.py  test_state.py  test_url_detect.py
