[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colab-ingest"
version = "0.1.0"
description = "CLI tool for downloading files from multiple hosts and uploading to Google Drive"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["cli", "download", "google-drive", "pixeldrain", "buzzheavier", "bunkr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
colab-ingest = "colab_ingest.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/colab-ingest"
Repository = "https://github.com/yourusername/colab-ingest.git"
Issues = "https://github.com/yourusername/colab-ingest/issues"

[tool.hatch.build.targets.wheel]
packages = ["colab_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
